# redis-6.0-annotated

./: .gitignore  CMakeLists.txt  README.md
src/: adlist.c  adlist.h  dict.c  dict.h  endianconv.h  intset.c  intset.h  listpack.c  object.c  quicklist.c  quicklist.h  rax.c  rax.h  sds.c  sds.h  t_hash.c  t_list.c  t_set.c  t_string.c  t_zset.c  ziplist.c  zipmap.c
